se realiza limpieza de carpetas

--- a/www/view/unidad.html
+++ b/www/view/unidad.html
@@ -1,5 +1,5 @@
 <div class="viewContainer">
-	<h2>Clase: {{nombre}}</h2>
+	<h2>{{nombre}}</h2>
 	<div class="clearfix"></div>
 	<ul id="clases" data-role="listview" data-inset="false">
 	{{#each this.clases}}
