--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -228,9 +228,6 @@ canvas.radialLoader{
 	border-radius:50%;
 	padding:2px;
 }
-.headerPlanificacion{
-	padding:0 1em;
-}
-#searchField{
-	
+.hidden{
+	display:none;
 }
