--- a/www/view/descargando.html
+++ b/www/view/descargando.html
@@ -1,12 +1,6 @@
-<center>
-	<h2>Descargando Datos</h2>
-	<br/>
-	<br/>
-	<p>
-		<i class="fa fa-spinner fa-5x fa-pulse"></i>
-		<br/>
-		<br/>
-		<br/>
-		<span>Descargando datos desde el servidor, por favor no cierre la aplicación.</span>
-	</p>
-</center>
+<div id="logoSplash" class="logo">
+    <div class="reset" style="position:relative; top:60%; width:180%; margin:0 auto 0 -40%">
+        <i class="fa fa-spinner fa-pulse fa-2x"></i>
+        <p style="margin:1em;">Descargando datos desde el servidor, por favor no cierre la aplicación.</p>
+    </div>
+</div>
