--- a/platforms/android/assets/www/view/unidad.html
+++ b/platforms/android/assets/www/view/unidad.html
@@ -1,6 +1,6 @@
 <div class="viewContainer">
 	<fieldset>
-        <div class="padding1em">
+        <div class="padding1em rounded-border">
             <table data-role="table" class="ui-responsive ui-shadow" id="gk-5299A7V" is="jqm-table">
                 <thead>
                     <tr>
@@ -29,23 +29,33 @@
 	<ul id="clases" data-role="listview" data-inset="false">
 	{{#each this.clases}}
 		{{#.}}
-    	<li class="ejecucion-clase-0" data-icon="false">
-            <div class="col-80">
-                <h3>{{this.nombre}}</h3>
-                <p>
-                    {{this.fechaini}}<br/>
-                    {{this.horas}} horas
-                </p>
+    	<li id="clase-li-{{this.id}}" class="ejecucion-clase-{{this.ejecucion}}" data-icon="false">
+            <div class="col-90">
+                <div class="col-70">
+                    <h3>{{this.nombre}}</h3>
+                    <p>
+                        {{this.fechainibonita}} - {{this.fechafinbonita}}<br/>
+                        {{this.horas}} horas
+                    </p>
+                </div>
+                <div class="containing-element col-30">
+                    <div class="ui-field-contain switch-clases">
+                        <select id="{{this.id}}" class="switch-clases" data-role="flipswitch" data-mini="true">
+                            <option value="off"{{#ifCond this.ejecucion 0}} selected="selected"{{/ifCond}}></option>
+                            <option value="on"{{#ifCond this.ejecucion 1}} selected="selected"{{/ifCond}}></option>
+                        </select>
+                    </div>
+                </div>
             </div>
-            <div class="col-20 menu-container">
+            <div class="col-10 menu-container">
                 <a href="#popupMenu{{this.id}}" class="menu" data-rel="popup" data-transition="appear">
                     <i class="fa fa-ellipsis-v fa-2x pull-right"></i>
                 </a>
                 <div data-role="popup" id="popupMenu{{this.id}}" data-theme="b">
-                    <ul data-role="listview" data-inset="true" style="min-width:210px;">
-                        <li><a href="{{this.id}}" class="ver-clase">Ver</a></li>
-                        <li><a href="{{this.id}}" class="eliminar-clase">Eliminar</a></li>
-                        <li><a href="{{this.id}}" class="tarea-clase">Tarea{{#if this.tareaAmount}}({{this.tareaAmount}}){{/if}}</a></li>
+                    <ul data-role="listview" data-inset="true" style="min-width:180px;">
+                        <li data-icon="false"><a href="{{this.id}}" class="ver-clase">Ver</a></li>
+                        <li data-icon="false"><a href="{{this.id}}" class="eliminar-clase">Eliminar</a></li>
+                        <li data-icon="false"><a href="{{this.id}}" class="tarea-clase">Tarea{{#if this.tareaAmount}}({{this.tareaAmount}}){{/if}}</a></li>
                     </ul>
                 </div>
             </div>
