Modificacions en el select por id del modelo para tabla clase; modificaciones en flujo y usabilidad

--- a/platforms/android/assets/www/view/clase.html
+++ b/platforms/android/assets/www/view/clase.html
@@ -1,1 +1,32 @@
-<h2>{{nombre}}</h2>
+<div class="container-fluid">
+	<h2>{{nombre}}</h2>
+	<div class="row">
+		<div class="col-xs-3">Profesor</div>
+		<div class="col-xs-3">{{autor}}</div>
+		<div class="col-xs-3">Inicio</div>
+		<div class="col-xs-3">{{fechaBonitaIni}}</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-3">Asignatura</div>
+		<div class="col-xs-3">{{sectorNombre}}</div>
+		<div class="col-xs-3">T&eacute;rmino</div>
+		<div class="col-xs-3">{{fechaBonitaFin}}</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-3">Unidad</div>
+		<div class="col-xs-3">{{unidadNombre}}</div>
+		<div class="col-xs-3">Duración</div>
+		<div class="col-xs-3">{{horas}}</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-3">Nivel</div>
+		<div class="col-xs-3">{{nivelNombre}}</div>
+		<div class="col-xs-3">Validado Por</div>
+		<div class="col-xs-3"></div>
+	</div>
+	<div class="row">
+		<p>
+			{{observacion}}
+		</p>
+	</div>
+</div>
