--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -329,8 +329,51 @@ canvas.radialLoader{
 .ejecucion-clase-0, .ejecucion-clase-0:visited, .ejecucion-clase-0 a{
 	background-color:#E68A8A !important;
 }
+.changeState, .changeState:visited, .changeState a{
+	background-color:#8AE68A;
+	-webkit-animation: changeState 0.5s linear 0s 1 alternate; /* Chrome, Safari, Opera */
+    animation: changeState 0.5s linear 0s 1 alternate;
+}
+.removeState, .removeState:visited, .removeState a{
+	background-color:#8AE68A;
+	-webkit-animation: removeState 0.5s linear 0s 1 alternate; /* Chrome, Safari, Opera */
+    animation: removeState 0.5s linear 0s 1 alternate;
+}
+.swipeIndicator{
+	position:absolute;
+	top:35%;
+	right:20%;
+	height:1.5em;
+	line-height: 1.5em;
+	width:1.5em;
+	border-radius: 50%;
+	background-color:rgba(127,127,127,0.6);
+	text-align: center;
+}
+.ejecucion-clase-1 .swipeIndicator span{
+	width: 0;
+    height: 0;
+    display:inline-block;
+    border-top:0.5em solid transparent;
+    border-bottom:0.5em solid transparent;
+    border-right:0.5em solid #8AE68A;
+    position: relative;
+    -webkit-animation: rightArrow 2s linear 0s infinite alternate; /* Chrome, Safari, Opera */
+    animation: rightArrow 2s linear 0s infinite alternate;
+}
 .ejecucion-clase-1, .ejecucion-clase-1:visited, .ejecucion-clase-1 a{
 	background-color:#8AE68A !important;
+}
+.ejecucion-clase-0 .swipeIndicator span{
+	width: 0;
+    height: 0;
+    display:inline-block;
+    border-top:0.5em solid transparent;
+    border-bottom:0.5em solid transparent;
+    border-left:0.5em solid #E68A8A;
+    position: relative;
+    -webkit-animation: leftArrow 2s linear 0s infinite alternate; /* Chrome, Safari, Opera */
+    animation: leftArrow 2s linear 0s infinite alternate;
 }
 .rounded-border{
 	margin:2%;
@@ -357,4 +400,64 @@ canvas.radialLoader{
 html .ui-page-theme-a .ui-btn.ui-btn-active, html .ui-bar-a .ui-btn.ui-btn-active, html .ui-body-a .ui-btn.ui-btn-active, html body .ui-group-theme-a .ui-btn.ui-btn-active, html body .ui-btn.ui-btn-a.ui-btn-active, html .ui-page-theme-a .ui-flipswitch-active, html .ui-bar-a .ui-flipswitch-active, html .ui-body-a .ui-flipswitch-active, html body .ui-group-theme-a .ui-flipswitch-active, html body .ui-flipswitch.ui-bar-a.ui-flipswitch-active, html .ui-page-theme-a .ui-slider-track .ui-btn-active, html .ui-bar-a .ui-slider-track .ui-btn-active, html .ui-body-a .ui-slider-track .ui-btn-active, html body .ui-group-theme-a .ui-slider-track .ui-btn-active, html body div.ui-slider-track.ui-body-a .ui-btn-active{
 	background-color: inherit;
 	border: none;
+}
+/* Chrome, Safari, Opera */
+@-webkit-keyframes leftArrow {
+    0%   {left:0px;}
+    25%  {left:3px;}
+    50%  {left:0px;}
+    100% {left:0px;}
+}
+
+/* Standard syntax */
+@keyframes leftArrow {
+    0%   {left:0px;}
+    25%  {left:3px;}
+    50%  {left:0px;}
+    100% {left:0px;}
+}
+/* Chrome, Safari, Opera */
+@-webkit-keyframes rightArrow {
+    0%   {right:0px;}
+    25%  {right:3px;}
+    50%  {right:0px;}
+    100% {right:0px;}
+}
+
+/* Standard syntax */
+@keyframes rightArrow {
+    0%   {right:0px;}
+    25%  {right:3px;}
+    50%  {right:0px;}
+    100% {right:0px;}
+}
+/* Chrome, Safari, Opera */
+@-webkit-keyframes changeState {
+    0%   {background-color:#E68A8A;}
+    25%  {background-color:#C3AC8A;}
+    50%  {background-color:#ACC38A;}
+    100% {background-color:#8AE68A;}
+}
+
+/* Standard syntax */
+@keyframes rightArrow changeState{
+    0%   {background-color:#E68A8A;}
+    25%  {background-color:#C3AC8A;}
+    50%  {background-color:#ACC38A;}
+    100% {background-color:#8AE68A;}
+}
+/* Chrome, Safari, Opera */
+@-webkit-keyframes removeState {
+    0%   {background-color:#8AE68A;}
+    25%  {background-color:#ACC38A;}
+    50%  {background-color:#C3AC8A;}
+    100% {background-color:#E68A8A;}
+}
+
+/* Standard syntax */
+@keyframes rightArrow removeState{
+    0%   {background-color:#8AE68A;}
+    25%  {background-color:#ACC38A;}
+    50%  {background-color:#C3AC8A;}
+    100% {background-color:#E68A8A;}
 }
