--- a/www/view/verunidad.html
+++ b/www/view/verunidad.html
@@ -13,14 +13,14 @@
 		<div class="col-xs-3">{{fechaBonitaFin}}</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-3">Unidad</div>
-		<div class="col-xs-3">{{unidadNombre}}</div>
+		<div class="col-xs-3">Nivel</div>
+		<div class="col-xs-3">{{nivelNombre}}</div>
 		<div class="col-xs-3">Duración</div>
 		<div class="col-xs-3">{{horas}}</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-3">Nivel</div>
-		<div class="col-xs-3">{{nivelNombre}}</div>
+		<div class="col-xs-3">Clases</div>
+		<div class="col-xs-3">{{totalClases}}</div>
 		<div class="col-xs-3">Validado Por</div>
 		<div class="col-xs-3"></div>
 	</div>
