--- a/platforms/android/assets/www/view/lista-asistencia.html
+++ b/platforms/android/assets/www/view/lista-asistencia.html
@@ -1,4 +1,4 @@
-<ul data-role="listview">
+<ul data-role="listview" data-inset="false">
 {{#each this.alumnos}}
 	{{#.}}
 	<li><a href="#">{{#if this.nombre_usuario}}} {{this.nombre_usuario}} {{/if}}</a></li>
